docs/sf-export/sfdx-raw/objects/Fee__c/Fee__c.object-meta.xml
<CustomObject>
    <label>Fee</label>
    <nameField>
        <displayFormat>Fee-{000000}</displayFormat>
        <label>Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>