docs/sf-export/sfdx-raw/objects/Fee__c/fields/Draft__c.field-meta.xml
<CustomField>
    <fullName>Draft__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Draft</label>
    <referenceTo>Draft__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>