docs/sf-export/sfdx-raw/objects/Fee__c/fields/Fee_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Date__c</fullName>
    <label>Fee Date</label>
    <type>Date</type>
</CustomField>