docs/sf-export/sfdx-raw/objects/Fee__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>