docs/sf-export/sfdx-raw/objects/Fee__c/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Plan</label>
    <referenceTo>Program_Plan__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <type>Lookup</type>
</CustomField>