docs/sf-export/sfdx-raw/objects/Fee__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>