docs/sf-export/sfdx-raw/objects/Fee__c/recordTypes/Citadel_Fee.recordType-meta.xml
<RecordType>
    <fullName>Citadel_Fee</fullName>
    <active>true</active>
    <label>Citadel Fee</label>
</RecordType>