docs/sf-export/sfdx-raw/objects/Fee__c/recordTypes/Processor_Fee.recordType-meta.xml
<RecordType>
    <fullName>Processor_Fee</fullName>
    <active>true</active>
    <label>Processor Fee</label>
</RecordType>