docs/sf-export/sfdx-raw/objects/Fee__c/recordTypes/Program_Fee.recordType-meta.xml
<RecordType>
    <fullName>Program_Fee</fullName>
    <active>true</active>
    <label>Program Fee</label>
</RecordType>