docs/sf-export/sfdx-raw/objects/Fee__c/recordTypes/Retainer_Fee.recordType-meta.xml
<RecordType>
    <fullName>Retainer_Fee</fullName>
    <active>true</active>
    <label>Retainer Fee</label>
</RecordType>