docs/sf-export/sfdx-raw/objects/Fee__c/recordTypes/Service_Fee.recordType-meta.xml
<RecordType>
    <fullName>Service_Fee</fullName>
    <active>true</active>
    <label>Service Fee</label>
</RecordType>