docs/sf-export/sfdx-raw/objects/Fee__c/recordTypes/Setup_Fee.recordType-meta.xml
<RecordType>
    <fullName>Setup_Fee</fullName>
    <active>true</active>
    <label>Setup Fee</label>
</RecordType>